--- a/app/Deployment.yaml
+++ b/app/Deployment.yaml
@@ -1,1 +1,20 @@
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    run: #{APP_NAME}#
+  name: #{APP_NAME}#
+spec:
+  replicas: #{REPLICAS_NUM}#
+  selector:
+    matchLabels:
+      run: #{APP_NAME}#
+  template:
+    metadata:
+      labels:
+        run: #{APP_NAME}#
+    spec:
+      containers:
+      - image: #{IMAGE_NAME}#:#{IMAGE_VERSION}#
+        imagePullPolicy: #{IMAGE_PULL_POLICY}#
+        name: #{APP_NAME}#
